#BUGFIX z-index, i10n
git-svn-id: https://plugins.svn.wordpress.org/upprev/trunk@591066 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles/upprev-admin.dev.css
+++ b/styles/upprev-admin.dev.css
@@ -117,5 +117,6 @@ tr.disabled
     position: absolute;
     left: 200px;
     top: 0;
+    z-index: 1;
 }
 
